[project]
name = "infra-cost-auditor"
version = "0.1.0"
description = "Financial data transformation tool for infrastructure cost auditing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# --- ADD THESE BLOCKS ---
[project.scripts]
audit = "cost_auditor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]